force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_AGREEMENT_VI__x/Forrester_SHIR_CASE_CRDR_AGREEMENT_VI__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_CASE_CRDR_AGREEMENT_VIEW</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_CASE_CRDR_AGREEMENT_VIEW</externalName>
    <label>CRDR Case Agreement</label>
    <pluralLabel>CRDR Case Agreements</pluralLabel>
</CustomObject>