force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_AGREEMENT_VI__x/fields/AGR_TERMINATING_IN_FY__c.field-meta.xml
<CustomField>
    <fullName>AGR_TERMINATING_IN_FY__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AGR_TERMINATING_IN_FY</description>
    <externalDeveloperName>AGR_TERMINATING_IN_FY</externalDeveloperName>
    <label>Terminated in FY</label>
    <type>Checkbox</type>
</CustomField>