force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_AGREEMENT_VI__x/fields/AGREEMENT_END_DT__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_END_DT__c</fullName>
    <description>AGREEMENT_END_DT</description>
    <externalDeveloperName>AGREEMENT_END_DT</externalDeveloperName>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>