force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_AGREEMENT_VI__x/fields/AGREEMENT_RECID__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_RECID__c</fullName>
    <description>AGREEMENT_RECID</description>
    <externalDeveloperName>AGREEMENT_RECID</externalDeveloperName>
    <label>Agreement</label>
    <length>24</length>
    <referenceTo>Forrester_SHIR_AGREEMENT_VIEW__x</referenceTo>
    <relationshipLabel>CRDR Case Agreements</relationshipLabel>
    <relationshipName>CRDR_Case_Agreements</relationshipName>
    <type>ExternalLookup</type>
</CustomField>