force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_AGREEMENT_VI__x/fields/AGREEMENT_STATUS__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_STATUS__c</fullName>
    <description>AGREEMENT_STATUS</description>
    <externalDeveloperName>AGREEMENT_STATUS</externalDeveloperName>
    <label>Agreement Status</label>
    <length>8</length>
    <type>Text</type>
</CustomField>