force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_AGREEMENT_VI__x/fields/AGREEMENT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_TYPE__c</fullName>
    <description>AGREEMENT_TYPE</description>
    <externalDeveloperName>AGREEMENT_TYPE</externalDeveloperName>
    <label>Type Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>