force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_AGREEMENT_VI__x/fields/CA_STATUS__c.field-meta.xml
<CustomField>
    <fullName>CA_STATUS__c</fullName>
    <description>CA_STATUS</description>
    <externalDeveloperName>CA_STATUS</externalDeveloperName>
    <label>Case Agreement Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>