force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_AGREEMENT_VI__x/fields/CASE_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_RECID__c</fullName>
    <description>CASE_RECID</description>
    <externalDeveloperName>CASE_RECID</externalDeveloperName>
    <label>CASE_RECID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>