force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_AGREEMENT_VI__x/fields/HAS_SUBLICENSEE__c.field-meta.xml
<CustomField>
    <fullName>HAS_SUBLICENSEE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>HAS_SUBLICENSEE</description>
    <externalDeveloperName>HAS_SUBLICENSEE</externalDeveloperName>
    <label>Sublicense Agreement</label>
    <type>Checkbox</type>
</CustomField>