force-app/main/default/objects/Forrester_SHIR_CASE_CRDR_AGREEMENT_VI__x/fields/STATUS_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>STATUS_DESCRIPTION__c</fullName>
    <description>STATUS_DESCRIPTION</description>
    <externalDeveloperName>STATUS_DESCRIPTION</externalDeveloperName>
    <label>Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>